# scap

./: Cargo.toml  README.md  build.rs
examples/: simple.rs
examples-c/: README.md  simple.c
include/: scap.h
src/: err.rs  ffi.rs  lib.rs
src/bpf/: common.h  prog.bpf.c
src/bpf/vmlinux/: vmlinux-6.8.12.h
