[package]
name = "scap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
libbpf-rs = "0.24"
thiserror = "2.0"
nix = { version = "0.29", features = ["fs"] }
tokio = { version = "1.43", features = ["rt", "sync", "net", "macros"] }

[dev-dependencies]
anyhow = "1.0"
ctrlc = "3.4"

[build-dependencies]
libbpf-cargo = "0.24"
bindgen = "0.71"
